# ai-use

./: .gitignore  README.md  hook_test.py  install.sh  pyproject.toml
.ai-pr-attribution/: .gitignore  codex-hook.md
.ai-pr-attribution/hooks/: collect-ai-event.sh  import-codex-session.sh  upload-ref.sh  upload-telemetry.sh
.ai-use/: codex-hook.md
.ai-use/hooks/: collect-ai-event.sh  import-codex-session.sh  upload-ref.sh  upload-telemetry.sh
.claude/: settings.json
.cursor/: hooks.json
.github/workflows/: ai-pr-attribution.yml  ai-use.yml  ci.yml  dashboard.yml  pages.yml
docs/: AI_USAGE.md  FAQ.md  ROLLOUT.md  index.html  mvp-plan.md
src/ai_pr_attribution/: adapters.py  agent_trace.py  cli.py  codex_session.py  config.py  dashboard.py  dashboard_markdown.py  diff_parser.py  events.py  github.py  github_native.py  hashing.py  installer.py  matcher.py  report.py  schema.py  telemetry_client.py
src/ai_pr_attribution/data/: dashboard_workflow.yml  workflow.yml
src/ai_use/: __init__.py  adapters.py  cli.py  codex_session.py  collector_server.py  config.py  dashboard.py  dashboard_markdown.py  diff_parser.py  events.py  git_utils.py  github.py  github_native.py  installer.py  matcher.py  report.py  telemetry_client.py
src/ai_use/data/: dashboard_workflow.yml  (+1 more)
tests/: test_adapters.py  test_agent_trace.py  test_cli.py  test_codex_session.py  test_collector.py  test_dashboard.py  test_dashboard_markdown.py  test_diff_parser.py  test_e2e.py  test_github.py  test_github_native.py  test_hashing.py  test_installer.py  test_matcher.py  test_report.py
