[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pr-attribution"
version = "0.1.0"
description = "Hash-only PR attribution for AI-generated code from Cursor, Claude Code, and Codex."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AI PR Attribution" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
ai-pr-attribution = "ai_pr_attribution.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
